brat/test/golden/error/fanin-too-many-overs.brat
f(x :: Nat, y :: Nat, z :: Nat) -> Vec(Nat, 2)
f = { [\/] }
